# idaes-gtep

./: .gitignore  .readthedocs.yml  COPYRIGHT.md  LICENSE  LICENSE.md  README.md  dispatchable_investments.json  driver.py  driver_naerm.py  gtep_solution.py  logfileAC.txt  logfileACcommit36dispatch6.txt  logfileACtest.txt  logfileDC.txt  logfileDCStage3Num5.txt  logfileDCgurobi12.txt  pyproject.toml  renewable_investments.json  setup.py  super_oneoff_plotting 1.py  super_oneoff_plotting.py
5 Bus JSON Data/: logfile12AC5BusExtremeVariation.txt  logfile12AC5BusHighR_S2C50D5.txt  logfile12AC5BusJSC.txt  logfile12AC5BusJSC_Branch1-10_PriSec_-c.txt  logfile12AC5BusJSC_Branch1-4_-c.txt  logfile12AC5BusJSC_Branch3-4-0_PriSec_-c.txt  logfile12AC5BusJSC_Branch3-4-1_PriSec_-c.txt  logfile12AC5BusJSC_Branch4-10_PriSec_-c.txt  logfile12AC5BusJSC_Pri-Sec-Ter_-c.txt  logfile12AC5BusJSC_S2C50D5.txt  logfile12AC5BusJSC_Standard_PriSec.txt  logfile12AC5BusJSC_Standard_PriSec_-c_2.txt  logfile12AC5BusJSC__S1_NC24.txt  logfile12AC5BusJSC__S1_NC30.txt  logfile12AC5BusJSC__S1_NC36.txt  logfile12AC5BusJSC__S1_NC42.txt  logfile12AC5BusJSC__S1_NC48.txt  logfile12AC5BusJSC__S1_NC54.txt  logfile12AC5BusJSC__S1_NC60.txt  logfile12AC5BusJSC__S2_NC24.txt  logfile12AC5BusJSC__S2_NC30.txt  logfile12AC5BusJSC__S2_NC36.txt  logfile12AC5BusJSC__S2_NC42.txt  logfile12AC5BusJSC__S2_NC48.txt  logfile12AC5BusJSC__S2_NC54.txt  logfile12AC5BusJSC__S2_NC60.txt  logfile12AC5BusJSC__S3_NC24.txt  logfile12AC5BusJSC__S3_NC36.txt  logfile12AC5BusJSC__S3_NC42.txt  logfile12AC5BusJSC__S3_NC48.txt  logfile12AC5BusJSC__S3_NC54.txt  logfile12AC5BusJSC__S3_NC60.txt  logfile12AC5BusJSC_sanity_-c.txt  logfile12AC5BusSuperHighR_S2C50D5.txt  logfile12ACS1N1C100D10.txt  logfile12ACS1N1C48D6.txt  logfile12ACS1N1C54D6.txt  logfile12ACS1N1C60D6.txt  logfile12DC5BusExtremeVariation.txt  logfile12DC5BusHighR.txt  (+56 more)
9 Bus JSON Data/: logfileACR_StandardwithSameCaptialCost.txt  logfileAC_9_CompleteNetwork.txt  logfileAC_9_CompleteSame.txt  logfileAC_9_ModerateVariation.txt  logfileAC_9busExtremeVariation.txt  logfileAC_9busTEST.txt  logfileAC_9busTEST2.txt  logfileAC_9buswithSameCaptialCost.txt  logfileDC_9_CompleteNetwork.txt  logfileDC_9_CompleteSame.txt  logfileDC_9_ModerateVariation.txt  logfileDC_9busExtremeVariation.txt  logfileDC_9buswithSameCaptialCost.txt  logfileDC_StandardwithSameCaptialCost.txt
First decent run 4_23_long/: dispatchable_investments.json  load_shed_3.json  output_to_prescient.ipynb  renewable_investments.json
NAERM_initial_testing/: debugging_plotting.py  more_debugging  (+2 more)
(+352 files in other folders)
