#################################################################################
# The Institute for the Design of Advanced Energy Systems Integrated Platform
# Framework (IDAES IP) was produced under the DOE Institute for the
# Design of Advanced Energy Systems (IDAES).
#
# Copyright (c) 2018-2026 by the software owners: The Regents of the
# University of California, through Lawrence Berkeley National Laboratory,
# National Technology & Engineering Solutions of Sandia, LLC, Carnegie Mellon
# University, West Virginia University Research Corporation, et al.
# All rights reserved.  Please see the files COPYRIGHT.md and LICENSE.md
# for full copyright and license information.
#################################################################################

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gtep"
version = "0.1.dev0"
description = "The IDAES Generation and Transmission Expansion Planning Framework"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = [ "LICENSE.md" ]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: MacOS',  # Not currently testing OSX but we probably should
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    "pyomo",
    "numpy",
    "gridx-egret == 0.5.5",
    "gridx-prescient == 2.2.2",
    "anyio",
    "pint",
    "pandas<3",
    "matplotlib",
    "ipython",
    "openpyxl",
]

[project.urls]
Homepage        = "https://github.com/IDAES/idaes-gtep"
Documentation   = "https://idaes-gtep.readthedocs.io/en/latest/"
Source          = "https://github.com/IDAES/idaes-gtep"

[tool.setuptools.package-data]
"*" = [
    "*.csv",
    "*.ipynb",
    "*.m",
    "*.md",
    "*.png",
    "*.rst",
    "*.txt",
    "*.xlsb",
    "*.xlsx",
]
